--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.4.0",
     "hoist-non-react-statics": "^3.3.2",
     "react": "^18.2.0",
