--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "axios": "^1.4.0",
     "hoist-non-react-statics": "^3.3.2",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/hoist-non-react-statics": "^3.3.1",
@@ -31,6 +34,7 @@
     "@types/react-dom": "^18.2.1",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.10",
     "@types/react-toastify": "^4.1.0",
     "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
