--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-alice-carousel": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-slick": "^0.29.0",
@@ -32,6 +33,7 @@
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/react-modal": "^3.16.0",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.10",
