--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tippyjs/react": "^4.2.6",
     "@types/react-modal": "^3.16.0",
     "axios": "^1.4.0",
+    "formik": "^2.2.9",
     "hoist-non-react-statics": "^3.3.2",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
@@ -32,7 +33,8 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/hoist-non-react-statics": "^3.3.1",
