--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL = "https://storefrontsmes-api.amalitech-dev.net/"
+VITE_API_BASE_URL = "http://localhost:4000"
 VITE_IMAGE_UPLOAD_URL_KEY = '4bccb04e0aaa9f400fa7cc7011572fc3'
